# rose.core

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
include/rose/core/: collision_world.hpp  model.hpp  player.hpp  thread_pool.hpp  window_manager.hpp
include/rose/core/opengl/: mesh.hpp  screenshot.hpp  shader_program.hpp  texture.hpp
include/rose/core/vulkan/: mesh.hpp  renderer.hpp  texture.hpp
include/rose/plugins/: plugin_sdk.hpp
models/: monkey.glb  monkey.gltf
shaders/: bloom.frag  post.vert  shader.frag  shader.vert
source/: main.cpp
source/core/: model.cpp  player.cpp  window_manager.cpp
source/core/opengl/: screenshot.cpp  shader_program.cpp
source/core/vulkan/: renderer.cpp
source/utility/: stb_image_impl.cpp
